move from jasmine to 'assert' function

--- a/101-exercises.html
+++ b/101-exercises.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>JS Assessment</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.4/jasmine.css" />
     <style type="text/css">
         h1 {
             font-family:monospace;
@@ -12,18 +11,12 @@
 </head>
 <body>
 
-<h1>JS Basics Assessment</h1>
+<h1>101 Exercises </h1>
+<h3>Test results are in the console.</h3>
 <p>See README.md for exercise directions</p>
 
-<!-- jasmine (The test runner) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.4/jasmine.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.4/jasmine-html.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.4/boot.js"></script>
+<script src="./assert.js" type="text/javascript"></script>
+<script src="./101-exercises.js" type="text/javascript"></script>
 
-<!-- automated tests (the test file) -->
-<script src="./tests.js" type="text/javascript"></script>
-
-<!-- custom js (your solutions to the assessment questions) -->
-<script src="./solutions.js" type="text/javascript" ></script>
 </body>
 </html>
