add directions and clarity

--- a/index.html
+++ b/index.html
@@ -49,23 +49,43 @@
 
             <h3>Quick Start</h3>
             <ol>
-                <li>Create an an account on <a href="https://glitch.com">Glitch.com</a></li>
+                <li>Create yourself an account on <a href="https://glitch.com">Glitch.com</a></li>
                 <li>Click on the fish icon in the upper right and select "Remix on Glitch" to make your own copy</li>
+                <li>Use Glitch.com as your editor</li>
             </ol>
+            <hr>
+            <h3>Orientation</h3>
             <ul>
                 <li>Open the JavaScript console in <a href="https://developer.mozilla.org/en-US/docs/Tools/Web_Console/Opening_the_Web_Console" target="_blank">Firefox</a> or <a href="https://stackoverflow.com/questions/66420/how-do-you-launch-the-javascript-debugger-in-google-chrome" target="_blank">Chrome</a>. The F12 key usually works.</li>
+                <li>Start writing solutions inside of 101-exercises.js in the editor.</li>
                 <li>Open the 101-exercises.js in your text editor</li>
                 <li></li>
             </ul>
+            <hr>
+            <h3>Setup instructions for use with git and GitHub</h3>
+            <ol>
+                <li>Go to https://github.com/ryanorsinger/101-exercises-js and click "Fork"</li>
+                <li>Find the 101-exercises repository on your account and clone it locally.</li>
+                <li>Open index.html in your browser</li>
+                <li>Make edits in 101-exercises.js</li>
+                <li>Add, commit, and push your work to your fork.</li>
+            </ol>
             
         </section>
         <section class="troubleshooting">
-            <h3>Troubleshooting</h3>
+            <h2>Troubleshooting</h2>
+            <h3>General Guidance</h3>
             <ul>
-                <li>Code runs from top to bottom</li>
-                <li>Any error in your JS code keeps the following code from running. This is how JS works.</li>
-                <li></li>
+                <li>JS Code runs from top to bottom</li>
+                <li>Any error in your JS code keeps the following code from running.</li>
+                <li>Double check your spelling. Capitalization matters in programming.</li>
+                <li>If you're sure you spelled something, check it anyways.</li>
             </ul>
+            <hr>
+            <h3>Error messages</h3>
+                <ul>
+                    <li>"ReferenceError: someVariable is not defined" means the variable/function needs to be defined</li>
+                </ul>
         </section>
         <section class="correct">
             <h3>Problems Correct</h3>
