Add meta tags and fix typo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>JS Assessment</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <meta name="description" content="101 Exercises for practicing JavaScript fundamentals datatypes, operators, and functions">
+    <meta name="keywords" content="learn to code, JavaScript">
+    <meta name="author" content="Ryan Orsinger">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
@@ -38,15 +42,14 @@
                 <p>The best way to learn how to program is write programs. Each exercise is a tiny little program.</p>
                 <p>To complete the exercises, expect to do lots of search engine searches, make many mistakes, and to feel stuck.</p>
             </article>  
-
             <hr>
             <article>
                 <h3>Resources</h3>
-                
                 <ul>
                     <li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps" target="_blank">JS First Steps</a></li>
                     <li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks" target="_blank">JS Building Blocks</a></li>
-                    <li><a href="https://eloquentjavascript.net/" targe="_blank">First chapters of Eloquent JavaScript</a></li>
+                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions" target="_blank">Functions reference</a></li>
+                    <li><a href="https://eloquentjavascript.net/" target="_blank">First chapters of Eloquent JavaScript</a></li>
                 </ul>
             </article>
         </section>
