--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
             <hr>
             <article>
                 <h3>Rationale</h3>
-                <p>Welcome to 101-Exercises!</p>
-                <p>This project exists to help learners gain deep practice with JS fundamentals, syntax, and converting problems in English to solutions in JS.</p>
+                <p>101 Exercises exists to help learners gain deep practice with fundamentals, operators, syntax, and converting problems in English to solutions in JS.</p>
                 <p>The best way to learn how to program is write programs. Each exercise is a tiny little program.</p>
-                <p>To complete the exercises, expect to do lots of search engine searches, make many mistakes, and to feel stuck.</p>
+                <p>Expect to do a tremendous amount of search engine searches, make many mistakes, and try again. This is all part of programming. Take breaks.</p>
             </article>  
             <hr>
             <article>
