--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JS Assessment</title>
+    <title>101 Exercises in JS</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <meta name="description" content="101 Exercises for practicing JavaScript fundamentals datatypes, operators, and functions">
     <meta name="keywords" content="learn to code, JavaScript">
