add traffic analytics

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
     </main> 
 
 <footer>
-
+    <!-- Analytics -->
+    <img src="https://traffic-analytics.glitch.me/counter.png?fallback=MY_WEBSITE&color=black" alt="" style="vertical-align: bottom;" aria-hidden="true">
 </footer>
 
 <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
