--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <footer>
     <!-- Analytics -->
-    <img src="https://traffic-analytics.glitch.me/counter.png?fallback=101_EXERCISES&color=black" alt="" style="vertical-align: bottom;" aria-hidden="true">
+    <img src="https://traffic-analytics.glitch.me/counter.png?fallback=101_EXERCISES&color=black" alt="" style="vertical-align: bottom;" aria-hidden="true" id="analytics">
 </footer>
 
 <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
