🐆🕌 add counter to html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </article>
         </section>
         <section class="correct">
-            <h2>Problems Correct</h2>
+            <h2><span id="count"></span><br>Problems Correct</h2>
             <ul></ul>
         </section>
     </main> 
