Update assert error wording

--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
                     <p>
                         <em>Uncaught Error</em> means the answer is incorrect and doesn't match the test. 
                         <br>    
-                        The number by the 101-exercises.js filename highlights the line for the exercise where the expected value in the test does not match the actual value provided by the attempted solution. Ignore the line numbers referenced in assert.js.
+                        The largest number by the 101-exercises.js filename specifies the line of code for the exercise where there is a mismatch. 
+                        <br>
+                        In this example, line 36 of 101-exercises.js specifies where there is an error. The earlier line numbers reference the assertion testing function itself.
                     </p>
                     <img src="https://cdn.glitch.com/eea181be-12a8-4dfb-9200-096233b7a427%2Fexpected_vs_actual.png?v=1566845593758" alt="uncaught error message">
                 </figure>
