add github issues link

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </article>  
             <hr>
             <article>
-                <p>If you notice any typos, misspellings, or mistakes, please triple check your work and <a href="" target="_blank">open an issue on GitHub</a> citing both the line number and exercise number.</p>
+                <p>If you notice any typos, misspellings, or mistakes, please triple check your work and <a href="https://github.com/ryanorsinger/101-exercises-js/issues" target="_blank">open an issue on GitHub</a> citing both the line number and exercise number.</p>
             </article>
         </section>
         <section class="correct">
