clarify instructions for JS console

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
             <article>
               <h3>Expected Workflow</h3>
               <ul>
-                <li>Open index.html in your browser, open the JS console, view results</li>
-                <li>Use the glitch.com editor to make changes in the 101-exercises.js file</li>
+                <li>From this page, open the JavaScript console to see the next error.</li>
+                <li>Each error message tells you the next exercise to solve or bug to fix.</li>
+                <li>Use the glitch.com editor to make changes in your 101-exercises.js file</li>
                 <li>Refresh the index.html page</li>
                 <li>Repeat</li>
               </ul>
@@ -41,10 +42,16 @@
             <article>
                 <h3>Orientation</h3>
                 <ul>
-                    <li>The index.html file is this page with the instructions</li>
-                    <li>Open the JavaScript console in <a href="https://developer.mozilla.org/en-US/docs/Tools/Web_Console/Opening_the_Web_Console" target="_blank">Firefox</a> or <a href="https://stackoverflow.com/questions/66420/how-do-you-launch-the-javascript-debugger-in-google-chrome" target="_blank">Chrome</a>. F12 usually works.</li>
+                    <li>This index.html page shares the instructions and the JS console shows errors.</li>
+                    <li>The only time your JS Console will show no errors is when all the exercises have working solutions.</li>
+                    <li>Open the JavaScript console in <a href="https://developer.mozilla.org/en-US/docs/Tools/Web_Console/Opening_the_Web_Console" target="_blank">Firefox</a> or <a href="https://stackoverflow.com/questions/66420/how-do-you-launch-the-javascript-debugger-in-google-chrome" target="_blank">Chrome</a>. 
+                    <ul>
+                        <li>For Mac, the keyboard shortcut is "Command + Option + i"</li>   
+                        <li>For Windows, the keyboard shortcut "Shift + CTRL + j".</li>
+                    </ul>
                     <li>Start writing solutions inside of 101-exercises.js in the editor.</li>
-                    <li>Refresh index.html to re-run any new changes from 101-exercises.js</li>
+
+                    <li>Refresh this index.html to re-run you new JS code, then check your JS Console to see that your solution worked or if there's something</li>
                 </ul>
             </article>
             <hr>
@@ -70,7 +77,8 @@
                 <h2>Troubleshooting</h2>
                 <h3>General Guidance</h3>
                 <ul>
-                    <li>JS Code runs from top to bottom</li>
+                    <li>Your JS code runs from top to bottom</li>
+                    <li>If you have a problem with Exercise #2, fix it before moving on to Exercise #3.</li>
                     <li>Any error in your JS code keeps the following code from running.</li>
                     <li>Double check your spelling. Capitalization matters in programming.</li>
                     <li>If you're sure you spelled something, check it anyways.</li>
