📙⏲ add more detail to the troubleshooting section

--- a/index.html
+++ b/index.html
@@ -78,10 +78,13 @@
                 <h3>General Guidance</h3>
                 <ul>
                     <li>Your JS code runs from top to bottom</li>
-                    <li>If you have a problem with Exercise #2, fix it before moving on to Exercise #3.</li>
-                    <li>Any error in your JS code keeps the following code from running.</li>
+                    <li>Solve the exercises one at a time and in order.</li>
+                    <li>Fix any syntax errors before moving forward with the exercises</li>
+                    <li>Any synax error in your code may halt the execution of all of your code.</li>  
                     <li>Double check your spelling. Capitalization matters in programming.</li>
-                    <li>If you're sure you spelled something, check it anyways.</li>
+                    <li>Solve one thing at a time and avoid jumping around.</li>
+                    <li>Each exercise must pass its tests in order for you to see the next exercise.</li>
+                    <li>If you have an incorrect answer or syntax error on an exercise, fix it before moving forward.</li>
                 </ul>
             </article>
             <hr>
