📫🏑 Add workflow video

--- a/index.html
+++ b/index.html
@@ -117,7 +117,12 @@
                     </p>
                     <img src="https://cdn.glitch.com/eea181be-12a8-4dfb-9200-096233b7a427%2Fexpected_vs_actual.png?v=1566845593758" alt="uncaught error message">
                 </figure>
-            </article>  
+            </article>
+            <article>
+                  <h3>Video Demonstration of Workflow</h3>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/fvP9Bh_sJyE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </article>
+            <article>
             <hr>
             <article>
                 <p>If you notice any typos, misspellings, or mistakes, please triple check your work and <a href="https://github.com/ryanorsinger/101-exercises-js/issues" target="_blank">open an issue on GitHub</a> citing both the line number and exercise number.</p>
