🌖💴 add more directions

--- a/index.html
+++ b/index.html
@@ -40,11 +40,18 @@
               </ul>
             </article>
             <article>
+              <h3>What to do when you don't know what to do next</h3>
+              <p>When the exercise asks you to reverse an array in JavaScript, the way forward is to search for <em>"How to reverse an array in JavaScript"</em> in your favorite search engine.</p>
+              <p>When the exercise asks you to check if a number is even, the way forward is to search for <em>"how to check if a number is even in JavaScript"</em>.</p>
+              <p>When the exercise has you calculate the area of a circle, the way forward is to search for <em>"how to calculate the area of a circle in JavaScript"</em> or <em>"How to get pi in JavaScript"</em>.</p>
+              <p>The pattern for finding what you need in JavaScript is to rely very heavily on search engine searches so you can find examples of working code and discussions about code that speak to your questions.</p> 
+            </article>
+            <article>
                 <h3>Orientation</h3>
                 <ul>
                     <li>This index.html page shares the instructions and the JS console shows errors.</li>
                     <li>The only time your JS Console will show no errors is when all the exercises have working solutions.</li>
-                    <li>Open the JavaScript console in <a href="https://developer.mozilla.org/en-US/docs/Tools/Web_Console/Opening_the_Web_Console" target="_blank">Firefox</a> or <a href="https://stackoverflow.com/questions/66420/how-do-you-launch-the-javascript-debugger-in-google-chrome" target="_blank">Chrome</a>. 
+                  <li>Open the JavaScript console in <a href="https://developer.mozilla.org/en-US/docs/Tools/Web_Console/Opening_the_Web_Console" target="_blank">Firefox</a> or <a href="https://stackoverflow.com/questions/66420/how-do-you-launch-the-javascript-debugger-in-google-chrome" target="_blank">Chrome</a></li> 
                     <ul>
                         <li>For Mac, the keyboard shortcut is "Command + Option + i"</li>   
                         <li>For Windows, the keyboard shortcut "Shift + CTRL + j".</li>
